# programmiersprachen-raytracer

./: .gitignore
framework/: ppmwriter.cpp  window.cpp
framework/prog5/: Box.cpp  Box.h  HitPoint.cpp  HitPoint.h  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  tests.cpp
source/: CMakeLists.txt  example.cpp  raytracer.cpp  tests.cpp
source/folders/camera/: camera.cpp  camera.h  camera.hpp  ray.cpp  ray.h  ray.hpp
source/folders/images/: test0.ppm  test1.ppm  test2.ppm  test3.ppm  test4.ppm  test5.ppm  test6.ppm  test7.ppm  test8.ppm  test9.ppm
source/folders/loader/: objLoader.cpp  objLoader.hpp  sdfLoader.cpp  sdfLoader.h  sdfLoader.hpp  sdfwriter.cpp  sdfwriter.hpp
source/folders/renderer/: light.cpp  light.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  sdfwriter.cpp  sdfwriter.hpp
source/folders/sdfFiles/: Animation.sdf  Animation_1.sdf  Hallo.sdf  start.sdf  start2.sdf  test0.sdf  test1.sdf  test2.sdf  test3.sdf  test4.sdf  test5.sdf  test6.sdf  test7.sdf  test8.sdf  test9.sdf
source/folders/shapes/: box.cpp  box.h  box.hpp  composite.cpp  composite.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  material.cpp  material.hpp  plane.cpp  plane.h  plane.hpp  shape.cpp  shape.h  shape.hpp  sphere.cpp  sphere.h  sphere.hpp  triangle.cpp  triangle.h  triangle.hpp
source/folders/skybox/: negx.ppm  negy.ppm  negz.ppm  posx.ppm  posy.ppm  posz.ppm  ppm.cpp  ppm.hpp  skybox.cpp  skybox.hpp
source/prog5/: Box.cpp  Box.h  Shape.h  Sphere.cpp  Sphere.h
